added pwd change endpoint and test for login
